fixed shadow bug on clicked tile (thanks stackoverflow!)

--- a/design V2/css/main.sass
+++ b/design V2/css/main.sass
@@ -144,14 +144,6 @@ a:hover
 	.tile.active:hover
 		background-position: 0
 
-	.tile:before
-		width: 15em
-		height: 15em
-		content: ""
-		position: absolute
-		box-shadow: inset 0 0 0 15px rgba(250,250,250,0.1)
-		filter: blur(10px)
-
 .bar-large
 	background-color: $blue
 	color: $white
